--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
     </div>
     <div class="projects">
       <button><a href="C:\Users\KIIT0001\Desktop\Web Development\html_post2ndyear\checkskillbetter.html">Personal Portfolio</a></button>
-      <button><a href="https://swapnil414.github.io/Restuarant-Webpage/">Restuarant Webpage</a></button>
+      <button><a href="https://swapnil414.github.io/Restuarant-Webpage/" target="_blank">Restuarant Webpage</a></button>
       <button>Next Project in Progress</button>
       <button>Next Project in Progress</button>
     </div>
